--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": [
+      "vite/client",
+    ]
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -22,4 +25,6 @@
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
+
+ 
 }
