--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,7 +4,10 @@
     "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "types": [
+      "vite/client",
+    ]
   },
   "include": ["vite.config.ts"]
 }
